Après avoir parlé avec Joey, on s'est rendu compte qu'il y avait un gros problème dans la pagination. En fait, elle n'était pas faite à la bonne place. Elle doit être faite lors du call SQL dans le BL. J'ai fait les modifications nécessaires. Il reste un petit "bug" visuel avec le bouton Afficher Plus que Joey va fix bientôt.

--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -133,7 +133,7 @@
             <h3>Environnements</h3>
             @Html.DropDownList("ddlEnvironnement", Model.EnvironnementsItems, new { @class = "form-control" })
             <div id="divDependance" class="border marging-top">
-                @{ Html.RenderAction("GetDependances", new { composant = Model }); }
+                @{ Html.RenderAction("GetDetailsDependances", new { composant = Model }); }
             </div>
         </div>
 
@@ -147,7 +147,7 @@
 <script>
     $("#ddlEnvironnement").on("change", function () {
         CallController(
-            "@Url.Action("GetDependances", "Composant")",
+            "@Url.Action("GetDetailsDependances", "Composant")",
             {
                 composant: @Html.Raw(Json.Encode(Model)),
                 environnementId: this.value
