--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -3,8 +3,8 @@
 }
 
 @model STM.GDA.Web.Models.ComposantModel
-@Html.ActionLink("Retour à la liste", "Index") <br>
-<div class="container">
+<div class="container container-details">
+	@Html.ActionLink("Retour à la liste", "Index") <br>
     <div class="col-md-5">
 
         <h3>Détails</h3>
