--- a/STM.GDA.Web/Views/Composant/_Liste.cshtml
+++ b/STM.GDA.Web/Views/Composant/_Liste.cshtml
@@ -3,7 +3,7 @@
 
 @foreach (var composant in Model)
 {
-<div class="divComposant" onclick="window.location.href = '@Url.Action("Details", "Composant", new { id =  @Html.ValueFor(x => composant.Id) })'">
+<div class="divComposant @(composant.DernierComposantAffiche ? "dernier-element" : "")" onclick="window.location.href = '@Url.Action("Details", "Composant", new { id =  @Html.ValueFor(x => composant.Id) })'">
     <div class="col-sm-10 bold padding-top">
         @Html.DisplayFor(x => composant.AbreviationNom)
     </div>
