Ajouter envoi des informations de dépendance au serveur lors de la modification d'un composant

--- a/STM.GDA.Web/Content/ComposantDetails.css
+++ b/STM.GDA.Web/Content/ComposantDetails.css
@@ -18,3 +18,11 @@
 .marging-top {
     margin-top: 10px;
 }
+
+.envTab {
+    display: none;
+}
+
+.envTab.currentEnvironnement {
+    display: block;
+}
